# stonepy

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CATALOG_VERSION  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  versions.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  drift.yml  live.yml  release.yml
0.1.2/: 404.html  index.html  sitemap.xml
0.1.2/API_REFERENCE/: index.html
0.1.2/api/client/: index.html
0.1.2/api/configuration/: index.html
0.1.2/api/errors/: index.html
0.1.2/api/models/: index.html
0.1.2/api/resources/: index.html
0.1.2/guide/authentication/: index.html
0.1.2/guide/error-handling/: index.html
0.1.2/guide/pagination/: index.html
0.1.2/quickstart/: index.html
0.1.2/search/: search_index.json
0.1.3/: 404.html  index.html  objects.inv  sitemap.xml
0.1.3/API_REFERENCE/: index.html
0.1.3/api/client/: index.html
0.1.3/api/configuration/: index.html
0.1.3/api/errors/: index.html
0.1.3/api/models/: index.html
0.1.3/api/resources/: index.html
0.1.3/changelog/: index.html
0.1.3/guide/authentication/: index.html
0.1.3/guide/configuration/: index.html
0.1.3/guide/error-handling/: index.html
0.1.3/guide/extensibility/: index.html
0.1.3/guide/logging/: index.html
0.1.3/guide/pagination/: index.html
0.1.3/guide/recipes/: index.html
0.1.3/guide/resilience/: index.html
0.1.3/guide/testing/: index.html
0.1.3/installation/: index.html
0.1.3/quickstart/: index.html
0.1.3/search/: search_index.json
0.2.0/: 404.html  index.html  sitemap.xml
0.2.0/API_REFERENCE/: index.html
0.2.0/api/client/: index.html
0.2.0/changelog/: index.html
0.2.0/installation/: index.html
0.2.0/quickstart/: index.html
0.2.0/search/: search_index.json
0.2.1/: 404.html  index.html  sitemap.xml
0.2.1/API_REFERENCE/: index.html
0.2.1/changelog/: index.html
0.2.1/installation/: index.html
0.2.1/quickstart/: index.html
0.2.1/search/: search_index.json
0.2.2/: 404.html  index.html  sitemap.xml
0.2.2/API_REFERENCE/: index.html
0.2.2/changelog/: index.html
0.2.2/installation/: index.html
0.2.2/quickstart/: index.html
0.2.2/search/: search_index.json
0.2.3/: 404.html  index.html  sitemap.xml
0.2.3/API_REFERENCE/: index.html
0.2.3/changelog/: index.html
0.2.3/installation/: index.html
0.2.3/quickstart/: index.html
0.2.4/: 404.html  index.html  sitemap.xml
0.2.4/API_REFERENCE/: index.html
0.2.4/changelog/: index.html
0.2.4/installation/: index.html
0.2.4/quickstart/: index.html
0.2.5/: 404.html  index.html  sitemap.xml
0.2.5/API_REFERENCE/: index.html
0.2.5/changelog/: index.html
0.2.5/installation/: index.html
0.2.5/quickstart/: index.html
0.2.6/: 404.html  index.html  sitemap.xml
0.2.6/API_REFERENCE/: index.html
0.2.6/changelog/: index.html
0.2.6/installation/: index.html
0.2.6/quickstart/: index.html
0.2.6/search/: search_index.json
0.3.0/: 404.html  index.html  objects.inv  sitemap.xml
0.3.0/API_REFERENCE/: index.html
0.3.0/changelog/: index.html
0.3.0/installation/: index.html
0.3.0/quickstart/: index.html
dev/: 404.html  gen_ref_pages.py  index.html  objects.inv  sitemap.xml
dev/API_REFERENCE/: index.html
dev/changelog/: index.html
dev/installation/: index.html
dev/quickstart/: index.html
dev/search/: search_index.json
docs/: API_REFERENCE.md  index.md  installation.md  quickstart.md
docs/api/: client.md  configuration.md  errors.md  models.md  resources.md
docs/guide/: authentication.md  configuration.md  error-handling.md  extensibility.md  logging.md  pagination.md  recipes.md  resilience.md  testing.md
scripts/: consistency_lint.py
src/stonepy/: __init__.py  client.py  errors.py
tests/: test_project_metadata.py  test_public_api.py  test_self_documentation.py  test_smoke.py
tests/contract/: test_datatype_enums.py  test_endpoint_specs.py  test_lookup_enums.py  test_models_roundtrip.py
tests/core/: test_client_auth.py  test_codec.py  test_config.py  test_endpoint.py  test_errors.py  test_models.py  test_pipeline.py  test_plugins.py  test_ratelimit.py  test_resource.py  test_retry.py  test_session.py  test_status.py  test_transport.py
tests/generator/: test_catalog.py  test_consistency_lint.py  test_emit_client.py  test_emit_contract.py  test_emit_endpoints.py  test_emit_models.py  test_main.py  test_scaffold.py
tests/golden/: test_golden_endpoint_specs.py
tests/live/: conftest.py  test_live_contract_probes.py  test_live_reads.py  test_live_round_trips.py
tests/models/: test_audit_payload_shapes.py  test_secret_field_repr.py
(+3594 files in other folders)
