[project]
name = "stonepy"
dynamic = ["version"]
description = "Python client for the StoneX (CIAPI) v2 trading API"
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Aaron Morgan", email = "aaron@dvops.io" }]
keywords = ["stonex", "ciapi", "trading", "cityindex"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = ["httpx>=0.27,<1.0", "pydantic>=2.7,<3.0", "simplejson>=3.19,<4.0"]

[project.urls]
Homepage = "https://github.com/aaronmgn/stonepy"
Repository = "https://github.com/aaronmgn/stonepy"
Documentation = "https://aaronmgn.github.io/stonepy/"
Issues = "https://github.com/aaronmgn/stonepy/issues"
Changelog = "https://github.com/aaronmgn/stonepy/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=5",
    "respx>=0.21",
    "mypy>=1.10",
    "ruff>=0.5",
    "unasync>=0.6",
    "pre-commit>=3.7",
    "types-simplejson",
    "twine>=5",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
    "mike>=2.1",
    "ruff>=0.5",
    "mkdocs-gen-files>=0.5,<0.7",
    "mkdocs-literate-nav>=0.6,<0.6.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/stonepy/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/stonepy"]

[tool.hatch.build.targets.wheel.force-include]
"src/stonepy/py.typed" = "stonepy/py.typed"

[tool.hatch.build.targets.sdist]
include = ["src/stonepy", "README.md", "LICENSE", "CHANGELOG.md", "pyproject.toml"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
markers = [
    "live: exercises endpoints against the real CIAPI demo account (needs STONEX_* creds; skipped otherwise)",
]

[tool.coverage.run]
source = ["src/stonepy"]
omit = [
    "src/stonepy/models/*",
    "src/stonepy/resources/*/_sync/*",
    "src/stonepy/resources/*/__init__.py",
]
